[gd_scene load_steps=29 format=3 uid="uid://wpdjhugicopb"]

[ext_resource type="Script" uid="uid://c0d0wifwkaoup" path="res://Scripts/main.gd" id="1_cegan"]
[ext_resource type="Texture2D" uid="uid://qhepkprtddwb" path="res://Assets/Environment/Table.png" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://d2qek72v4bki6" path="res://Assets/Environment/bg-v2.png" id="2_0odxb"]
[ext_resource type="PackedScene" uid="uid://cqqj827tloqdb" path="res://Scenes/rendang_plate.tscn" id="2_0xm2m"]
[ext_resource type="FontFile" uid="uid://bqe7ac6nj2yab" path="res://Assets/Fredoka-Medium.ttf" id="2_yaehf"]
[ext_resource type="PackedScene" uid="uid://bkuv3ckk1o34e" path="res://Scenes/serving_plate.tscn" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://d2fk7pbbm01eo" path="res://Scenes/ayam_pop_plate.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://c7l5v3dxl0dts" path="res://Scenes/telur_plate.tscn" id="5_lquwl"]
[ext_resource type="PackedScene" uid="uid://dtcesociub8au" path="res://Scenes/sambel_bowl.tscn" id="6_7mycd"]
[ext_resource type="Script" uid="uid://v36kqya6siku" path="res://Scripts/Components/send&receive_item_component.gd" id="6_dg77c"]
[ext_resource type="Script" uid="uid://cghe8q3qvuhts" path="res://Scripts/queue_layer.gd" id="6_yaehf"]
[ext_resource type="Script" uid="uid://cmjuuke8ouhjc" path="res://Scripts/Components/queue_pos_component.gd" id="7_074og"]
[ext_resource type="Script" uid="uid://dhlhmlcudn13k" path="res://Scripts/time_label.gd" id="7_82xsv"]
[ext_resource type="PackedScene" uid="uid://cb27jdik8673e" path="res://Scenes/sayur_plate.tscn" id="7_272bh"]
[ext_resource type="PackedScene" uid="uid://cwsuey3hveipf" path="res://Scenes/rice_cooker.tscn" id="8_5vw27"]
[ext_resource type="Script" uid="uid://b7ucpewsq7s0o" path="res://Scripts/spawn_timer_bar.gd" id="8_d13ii"]
[ext_resource type="Script" uid="uid://c65ntgh2cph03" path="res://Scripts/customer_spawner.gd" id="8_ryguw"]
[ext_resource type="PackedScene" uid="uid://cni01jfugvef3" path="res://Scenes/es_teh.tscn" id="11_efxa6"]
[ext_resource type="PackedScene" uid="uid://bpx4pdmwju2k3" path="res://Scenes/trash_can.tscn" id="13_ycdy4"]
[ext_resource type="PackedScene" uid="uid://dtvk4x5ew6kor" path="res://Scenes/UI/in_game_ui.tscn" id="21_getpj"]
[ext_resource type="Script" uid="uid://4sef0ollbfhn" path="res://Scripts/debugger_label.gd" id="22_ryguw"]
[ext_resource type="AudioStream" uid="uid://c77tjkm8wujqa" path="res://Assets/Sounds/Interior Birdecorator Decorate.ogg" id="24_0odxb"]
[ext_resource type="AudioStream" uid="uid://46hsinbmkgpx" path="res://Assets/Sounds/Cafeteria.wav" id="24_1u8w0"]
[ext_resource type="AudioStream" uid="uid://dgnp21tknm3ds" path="res://Assets/Sounds/caps hit with wood 20.wav" id="24_sfx_success"]
[ext_resource type="AudioStream" uid="uid://yp488g0gbi5m" path="res://Assets/Sounds/cash-register-purchase.wav" id="25_sfx_cash"]

[sub_resource type="LabelSettings" id="LabelSettings_d13ii"]
font = ExtResource("2_yaehf")
font_size = 21

[sub_resource type="LabelSettings" id="LabelSettings_cegan"]
font = ExtResource("2_yaehf")
font_size = 52

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ryguw"]
bg_color = Color(0.412067, 0.640458, 0.709563, 1)

[node name="Main" type="Node2D"]
process_priority = 10
script = ExtResource("1_cegan")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(962, 311)
scale = Vector2(1.25481, 1.22656)
texture = ExtResource("2_0odxb")

[node name="DebuggerLayer" type="CanvasLayer" parent="."]
layer = 128
visible = false

[node name="DebuggerLabel" type="Label" parent="DebuggerLayer"]
offset_left = 258.0
offset_top = 568.0
offset_right = 716.0
offset_bottom = 710.0
text = "
    difficulty: %d                              available slot: %d
    max customers: %d
    max main dish: %d
    taken slot: %d"
label_settings = SubResource("LabelSettings_d13ii")
script = ExtResource("22_ryguw")

[node name="TimeLabel" type="Label" parent="DebuggerLayer"]
offset_left = 167.0
offset_top = 29.0
offset_right = 300.0
offset_bottom = 93.0
text = "00:00"
label_settings = SubResource("LabelSettings_cegan")
script = ExtResource("7_82xsv")

[node name="SpawnTimerBar" type="ProgressBar" parent="DebuggerLayer"]
offset_left = 166.0
offset_top = 93.0
offset_right = 303.0
offset_bottom = 126.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ryguw")
value = 66.43
show_percentage = false
script = ExtResource("8_d13ii")

[node name="WalkOutLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="OffQueueLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="CustomerSpawner" type="Node2D" parent="OffQueueLayer"]
script = ExtResource("8_ryguw")

[node name="Timer" type="Timer" parent="OffQueueLayer/CustomerSpawner"]
wait_time = 4.0

[node name="QueueLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_priority = 1
layer = 5
script = ExtResource("6_yaehf")

[node name="QueuePos1" type="Marker2D" parent="QueueLayer"]
position = Vector2(200, 634)
script = ExtResource("7_074og")
metadata/_edit_lock_ = true

[node name="QueuePos2" type="Marker2D" parent="QueueLayer"]
position = Vector2(670, 634)
script = ExtResource("7_074og")
metadata/_edit_lock_ = true

[node name="QueuePos3" type="Marker2D" parent="QueueLayer"]
position = Vector2(1145, 634)
script = ExtResource("7_074og")
metadata/_edit_lock_ = true

[node name="QueuePos4" type="Marker2D" parent="QueueLayer"]
position = Vector2(1620, 634)
script = ExtResource("7_074og")
metadata/_edit_lock_ = true

[node name="SFX_Success" type="AudioStreamPlayer" parent="QueueLayer"]
stream = ExtResource("24_sfx_success")
volume_db = 2.0
bus = &"SFX"

[node name="SFX_CashRegister" type="AudioStreamPlayer" parent="QueueLayer"]
stream = ExtResource("25_sfx_cash")
volume_db = -3.0
bus = &"SFX"

[node name="TableLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Table" type="Sprite2D" parent="TableLayer"]
position = Vector2(961.5, 703)
scale = Vector2(1.78056, 0.557292)
texture = ExtResource("1_ig7tw")

[node name="ServingPlate" parent="TableLayer" instance=ExtResource("3_h2yge")]
position = Vector2(960, 622)

[node name="SambelBowl" parent="TableLayer" node_paths=PackedStringArray("receiver") instance=ExtResource("6_7mycd")]
position = Vector2(1409, 804)
scale = Vector2(0.7, 0.7)
script = ExtResource("6_dg77c")
receiver = NodePath("../ServingPlate")
item_list = ["Sambal"]

[node name="SayurPlate" parent="TableLayer" node_paths=PackedStringArray("receiver") instance=ExtResource("7_272bh")]
position = Vector2(1412, 967)
scale = Vector2(0.7, 0.7)
receiver = NodePath("../ServingPlate")
item_list = ["Sayur"]

[node name="TelurPlate" parent="TableLayer" node_paths=PackedStringArray("receiver") instance=ExtResource("5_lquwl")]
position = Vector2(1066, 889)
script = ExtResource("6_dg77c")
receiver = NodePath("../ServingPlate")
item_list = ["Telur"]

[node name="AyamPopPlate" parent="TableLayer" node_paths=PackedStringArray("receiver") instance=ExtResource("4_1bvp3")]
position = Vector2(642, 890)
script = ExtResource("6_dg77c")
receiver = NodePath("../ServingPlate")
item_list = ["Ayam Pop"]

[node name="RendangPlate" parent="TableLayer" node_paths=PackedStringArray("receiver") instance=ExtResource("2_0xm2m")]
position = Vector2(219, 905)
script = ExtResource("6_dg77c")
receiver = NodePath("../ServingPlate")
item_list = ["Rendang"]

[node name="EsTeh" parent="TableLayer" node_paths=PackedStringArray("receiver") instance=ExtResource("11_efxa6")]
position = Vector2(1760, 579)
scale = Vector2(0.7, 0.7)
script = ExtResource("6_dg77c")
receiver = NodePath("../ServingPlate")
item_list = ["Es Teh"]

[node name="RiceCooker" parent="TableLayer" node_paths=PackedStringArray("receiver") instance=ExtResource("8_5vw27")]
position = Vector2(1749, 888)
script = ExtResource("6_dg77c")
receiver = NodePath("../ServingPlate")
item_list = ["Nasi"]

[node name="TrashCan" parent="TableLayer" node_paths=PackedStringArray("serving_plate") instance=ExtResource("13_ycdy4")]
position = Vector2(200, 590)
serving_plate = NodePath("../ServingPlate")

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 128

[node name="InGameUI" parent="UILayer" instance=ExtResource("21_getpj")]

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_0odxb")
autoplay = true
bus = &"BGM"
parameters/looping = true

[node name="Ambiance" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_1u8w0")
autoplay = true
bus = &"BGM"
